# HomeLabHQ

./: .gitignore  AGENTS.md  ARCHITECTURE_REFACTOR_PLAN.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REVIEW.md  constraints.txt  docker-compose.yml  history-migration.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  refactor.md  requirements.txt
.github/: dependabot.yml
.github/workflows/: verify.yml
_verify/: history_store_test.py  m4_test.py  mock_api.py  mock_keeplink.py  mock_mikrotik.py  mock_openwrt.py  mock_vendors.py  plumbing_test.py  richdetail_test.py  roster_test.py  zyxel_test.py
backend/: app.py  auth.py  authorization.py  client_discovery.py  client_merge.py  client_roster.py  client_service.py  clients.py  context.py  crypto.py  dashboards.py  detect.py  devices.py  domain.py  errors.py  firewall.py  history.py  logbuf.py  nac.py  nac_service.py  netutil.py  poller.py  push.py  services.py  snmp_backend.py  store.py  tls.py  transports.py
backend/api/: __init__.py  admin_routes.py  auth_routes.py  client_routes.py  dashboard_routes.py  device_routes.py  nac_routes.py  push_routes.py
backend/drivers/: __init__.py  base.py  firewalla.py  generic_api.py  generic_http.py  generic_snmp.py  generic_ssh.py  keeplink.py  mikrotik.py  openwrt.py  opnsense.py  pfsense.py  proxmox.py  qnap.py  registry.py  snmp_switch.py  synology.py  truenas.py  unifi.py  zyxel_ap.py
backend/http/: __init__.py  handler.py  hq_server.py  requests.py  responses.py  router.py  server.py  static.py
docs/: api.md  architecture.md  configuration.md  frontend-state.md  operations.md  security.md  verification.md
e2e/: critical-path.spec.mjs
scripts/: lint.sh  playwright.sh  setup-mkcert.sh  test.sh  verify.sh
tests/: test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_verify_entrypoint.py  test_verify_scripts.py
web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
web/js/: api.js  app.js  charts.js  clients.js  detail.js  devices.js  logs.js  router.js  settings.js  theme.js  ui.js  users.js  wizard.js
web/js/clients/: actions.js  api.js  edit-modal.js  (+5 more)
(+6 files in other folders)
