[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "homelabhq"
version = "0.1.0"
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
  "pytest>=9.0.3,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
  "mypy>=1.13,<2",
  "pip-audit>=2.7,<3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-config"

[tool.coverage.run]
branch = true
source = ["backend"]

[tool.coverage.report]
show_missing = true
# Baseline raised 2026-07-19 after user-deprovisioning coverage was added (60 tests).
# Increase this floor as coverage is added; do not lower it for unrelated work.
fail_under = 51.5

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Keep the initial lint gate focused on parser/runtime-danger rules.
select = ["E9", "F63", "F7", "F82"]

[tool.mypy]
# These modules own the typed application boundary. Driver/vendor payloads
# remain mapping-shaped by design and are not part of this initial gate.
files = ["backend/domain.py", "backend/devices.py", "backend/poller.py"]
mypy_path = ["backend"]
explicit_package_bases = true
follow_imports = "skip"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["web*", "tests*", "_verify*"]
namespaces = false
